<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_circle_notifications_24"
        android:title="@string/title_deeplink" />

    <item
        android:id="@+id/navigation_iap"
        android:icon="@drawable/ic_baseline_monetization_on_24"
        android:title="@string/title_iap_short" />
    <item
        android:id="@+id/navigation_inwebview"
        android:icon="@drawable/ic_baseline_open_in_browser_24"
        android:title="@string/title_web"/>
</menu>