<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jason.singularappbykotlin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_webview"
            app:destination="@id/navigation_inwebview" />
    </fragment>

    <fragment
        android:id="@+id/navigation_iap"
        android:name="com.jason.singularappbykotlin.ui.iap.IapFragment"
        android:label="@string/title_iap"
        tools:layout="@layout/fragment_iap" />

    <fragment
        android:id="@+id/navigation_ads"
        android:name="com.jason.singularappbykotlin.ui.ads.AdsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_ads" />

    <fragment
        android:id="@+id/navigation_deeplink"
        android:name="com.jason.singularappbykotlin.ui.deeplink.DeeplinkFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_deeplink" />

    <fragment
        android:id="@+id/navigation_inwebview"
        android:name="com.jason.singularappbykotlin.ui.inweb.InwebFragment"
        android:label="@string/title_web"
        tools:layout="@layout/fragment_inweb" />
</navigation>