<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.iap.IapFragment">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/singular_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_iap"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/etIap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_iap_price"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinner"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/button_inapp_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_in_app_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_purchase"
        app:layout_constraintTop_toBottomOf="@id/etIap" />
    <Button
        android:id="@+id/button_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_revenue_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_inapp_event"
        app:layout_constraintTop_toBottomOf="@id/etIap"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@+id/button_inapp_event" />

    <TextView
        android:id="@+id/tvInAppAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_in_app_ads"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/button_purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/etIaaRevenue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_iaa_price"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/spinnerIaaCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInAppAds" />
    <Spinner
        android:id="@+id/spinnerIaaCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIaaRevenue"
        app:layout_constraintTop_toBottomOf="@id/tvInAppAds" />
    <RadioGroup
        android:id="@+id/rbGroupMediation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/etIaaRevenue">
        <RadioButton
            android:id="@+id/rbAdmob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mediation_admob"/>
        <RadioButton
            android:id="@+id/rbApplovin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mediation_applovin"/>
        <RadioButton
            android:id="@+id/rbGeneric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mediation_other"
            android:checked="true"/>
    </RadioGroup>
    <Button
        android:id="@+id/button_inappads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btn_revenue_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbGroupMediation" />
</androidx.constraintlayout.widget.ConstraintLayout>